# ImageSegmentation

./: .gitignore  README.md  main.py  pyproject.toml  train.py  unet_test.ipynb
data_utils/: data_test.py  metrics.py  pre_process.py
model_tests/: inference_test.py
models/: model_blocks.py  unet.py
sweep/: model_sweep.py  sweep_config.yaml
tests/: data_test.py  inference_test.py
