[project]
name = "imagesegmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "lightning>=2.6.0",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "pytorch-lightning>=2.6.0",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
    "wandb>=0.23.1",
]
